Tested the compact version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
 
     <string name="email_2_subject">Bonjour from Paris</string>
     <string name="email_2_body">
-        Here are some great shots from my trip...
+        Here are some great shots from my trip…
     </string>
     <string name="email_2_time">1 hour ago</string>
 
@@ -106,7 +106,7 @@
         organizing committee for the high school reunion this fall. I don\'t know if you were
         planning on going or not, but she could definitely use our help in trying to track down lots
         of missing alums.\n\nIf you can make it, we\'re doing a little phone-tree party at her place
-        next Saturday, hoping that if we can find one person, thee more will...
+        next Saturday, hoping that if we can find one person, thee more will…
     </string>
     <string name="email_3_time">2 hours ago</string>
 
@@ -119,7 +119,7 @@
         anywhere near or around Taiba. I hear it\'s beautiful there and if you\'re up for it, I\'d
         love to go. Other than that, I haven\'t spent too much time looking into places along our
         road trip route. I\'m assuming we can find places to stay and things to do as we drive and
-        find places we think look interesting. But... I know you\'re more of a planner, so if you
+        find places we think look interesting. But… I know you\'re more of a planner, so if you
         have ideas or places in mind, lets jot some ideas down!\n\nMaybe we can jump on the phone
         later today if you have a second.
     </string>
@@ -171,5 +171,4 @@
         link.
     </string>
     <string name="email_11_time">3 hours ago</string>
-
 </resources>
